--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@types/jest": "^29.2.4",
     "jest": "^29.3.1"
   },
   "scripts": {
